corrected the overflowing text in freeplay mode

--- a/style.css
+++ b/style.css
@@ -50,23 +50,29 @@ body {
 
 
 .game-container {
-    position: relative; /* Add relative positioning */
+    position: relative;
     display: flex;
-    flex-direction: column; /* Ensure vertical stacking */
+    flex-direction: column;
     align-items: center;
-    justify-content: center; /* Center content horizontally and vertically */
-    flex-grow: 1; /* Allow the game container to grow and take up remaining space */
+    justify-content: center; 
+    flex-grow: 1; 
 }
 
 .grid-expanded .toolbar {
-    top: 5%; /* Adjust the top position to move it up */
-    transform: translateY(-5%); /* Adjust the translate value */
+    top: 10%; /* move it up */
+    transform: translateY(-5%); 
 }
 
 .toolbar-small .toolbar-button {
     width: 70px;
-    height: 70px; /* Smaller size */
-    font-size: 18px; /* Smaller font size */
+    height: 70px; 
+    font-size: 8px; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    overflow: hidden; 
 }
 
 .toolbar-small .toolbar-button lord-icon {
@@ -75,18 +81,16 @@ body {
 }
 
 .toolbar-small .button-text {
-    font-size: 11px; /* Smaller text */
-    margin-bottom: 10px; /* Adjust margin */
+    font-size: 9px; 
+    margin-bottom: 5px; 
 }
 
 .grid-expanded .button-container {
-    position: absolute; /* Change position to absolute */
-    top: 80%; /* Adjust this value to move it closer to the grid */
+    position: absolute; 
+    top: 80%; 
     left: 50%; /* Center it horizontally */
     transform: translate(-50%, -50%); /* Center it */
 }
-
-
 
 .city-grid {
     display: grid;
